# nfl-prop-predictor

./: .gitignore  VERSIONS.md  main.py  plan.md  pyproject.toml
api/: __init__.py  schemas.py  server.py  settings.py  sidecar.py  telemetry.py
data/: nflverse_loader.py  odds_client.py  stadium_coords.py  upcoming.py  weather.py
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ModelingNotes.md  Step4Plan.md  TradingOps.md  holdout_metrics.json  holdout_metrics.md  holdout_revision_comparison.json  holdout_revision_comparison.md  model_revision_comparison.json  model_revision_comparison.md  paper_trade_breakdown_by_book_2024-2025.csv  paper_trade_breakdown_by_book_2024-2025.json  paper_trade_breakdown_by_book_2024.csv  paper_trade_breakdown_by_book_2024.json  paper_trade_breakdown_by_book_2025.csv  paper_trade_breakdown_by_book_2025.json  paper_trade_breakdown_by_edge_bucket_2024-2025.csv  paper_trade_breakdown_by_edge_bucket_2024-2025.json  paper_trade_breakdown_by_edge_bucket_2024.csv  paper_trade_breakdown_by_edge_bucket_2024.json  paper_trade_breakdown_by_edge_bucket_2025.csv  paper_trade_breakdown_by_edge_bucket_2025.json  paper_trade_breakdown_by_season_2024-2025.csv  paper_trade_breakdown_by_season_2024-2025.json  paper_trade_breakdown_by_season_2024.csv  paper_trade_breakdown_by_season_2024.json  paper_trade_breakdown_by_season_2025.csv  paper_trade_breakdown_by_season_2025.json  paper_trade_breakdown_by_selected_side_2024-2025.csv  paper_trade_breakdown_by_selected_side_2024-2025.json  paper_trade_breakdown_by_selected_side_2024.csv  paper_trade_breakdown_by_selected_side_2024.json  paper_trade_breakdown_by_selected_side_2025.csv  paper_trade_breakdown_by_selected_side_2025.json  paper_trade_breakdown_by_stat_2024-2025.csv  (+27 more)
(+136 files in other folders)
