[project]
name = "nfl-prop-predictor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "nfl-data-py>=0.3.2",
    "pandas>=2.0",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "matplotlib>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "pyinstaller>=6.14.0",
    "sse-starlette>=3.3.4",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "statsmodels>=0.14.0",
]

[tool.pytest.ini_options]
addopts = "-m \"not slow\""
cache_dir = "tmp/pytest_cache"
testpaths = ["tests"]
markers = [
    "slow: marks tests that hit the real nfl_data_py API (deselect with '-m not slow')",
]
