[package]
name = "nfl-prop-predictor-desktop"
version = "0.5.0"
description = "NFL Prop Predictor desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "nfl_prop_predictor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
